Fix: Updated sign-in and sign-up button color for better visibility

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -59,6 +59,6 @@ body {
 .user-info {
   min-width: 800px;
 }
-.navber-nav .nav-item .nav-link {
-  color:#FFFFFF;
-}
+.navbar-nav .nav-item .nav-link {
+   color: #FFFFFF;
+} 
